# police_for_university_study

./: .env-example  README.md  main.py  pyproject.toml  settings.py
app/data_classes/: __init__.py  assignment.py  base_data_class.py  personnel.py  police_department.py  staff.py  technic.py  technic_department.py
app/utils/: db_execute.py  errors.py
